# getdat

./: .gitignore  .pre-commit-config.yaml  README.md  READMe.md  _config.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  jekyll-gh-pages.yml  pre-release.yml  release.yml  tests.yml
docs/: CNAME  Gemfile  LICENSE.md  READMe.md  ReadMe.md  _config.yml  index.md  local_dev.md
docs/_includes/: attribution.html  braintrust.html  footer.html  head-custom-google-analytics.html  navigation.html
docs/_layouts/: default.html
docs/assets/css/: style.scss
src/getdat/: constants.py  main.py  utils.py
tests/: test_main.py  test_utils.py
tests/static/: annas_archive_detail.html  annas_archive_search.html  libgen_li_detail.html  libgen_rs_detail.html
