[tool.poetry]
name = "getdat"
version = "0.1.0"
description = ""
authors = ["Christopher Dixon <christopher.snipes.dixon@gmail.com>"]
readme = "README.md"
packages = [{include = "getdat", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
requests = "^2.31.0"
bs4 = "^0.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
getdat = "getdat.main:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
