[tool.poetry]
name = "getdat"
version = "0.1.0"
description = "A command line utility for getting resources available online"
documentation = "https://github.com/Audiosutras/getdat/docs"
repository = "https://github.com/Audiosutras/getdat"
keywords = ["cli", "books", "movies", "episodes", "anna's archive", "movie-web"]
authors = ["Christopher Dixon <christopher.snipes.dixon@gmail.com>"]
readme = "docs/READMe.md"
packages = [{include = "getdat", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
requests = "^2.31.0"
bs4 = "^0.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
getdat = "getdat.main:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
