[tool.poetry]
name = "getdat"
version = "0.1.3"
description = "A command line utility for getting resources available online"
homepage = "https://audiosutras.github.io/getdat/"
repository = "https://github.com/Audiosutras/getdat"
keywords = ["cli", "books", "movies", "episodes", "anna's archive", "movie-web", "web scraper"]
authors = ["Christopher Dixon <christopher.snipes.dixon@gmail.com>"]
readme = "docs/ReadMe.md"
packages = [{include = "getdat", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[tool.poetry.scripts]
getdat = "getdat.main:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
